[package]
name = "ethereum-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
rlp = "0.5.2"
hex = "0.4"
secp256k1 = { version = "0.29.0", features = ["rand-std", "recovery"] }
bytes = "1.7.0"
concat-kdf = "0.1.0"
sha2 = "0.10.8"
ctr = "0.9.2"
aes = "0.8.4"
hmac = "0.12.1"
anyhow = "1.0.86"
