[package]
name = "ethereum-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
# dependencies for error handling
anyhow = "1.0.86"
# dependencies for non-blocking io
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros", "net", "io-util"] }
futures = "0.3.30"
# depepdencies needed for implementing RLPx handshake
rlp = "0.5.2"
hex = "0.4"
secp256k1 = { version = "0.29.0", features = ["rand-std", "recovery"] }
bytes = "1.7.0"
concat-kdf = "0.1.0"
sha2 = "0.10.8"
ctr = "0.9.2"
aes = "0.8.4"
hmac = "0.12.1"
sha3 = "0.10.8"
block-padding = "0.3.3"
cipher = { version = "0.4.4", features = ["block-padding"] }
